# charex

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
charex/: __init__.py  _stringdtype.c
charex/benchmarks/: benchmark.py  matrix.py
charex/core/: __init__.py  _pointer_intrinsics.py  _string_intrinsics.py  string_intrinsics.py
charex/numpy/: stringdtype.py
charex/numpy/overloads/: _shared.py  char.py  definitions.py  logic.py  strings.py
charex/tests/: definitions.py  support.py  test_comparison.py  test_logical.py  test_string_information.py  test_stringdtype_baseline.py  test_strings_comparison.py  test_strings_information.py
docs/: release-0.4.md  string-array-shape-parity.md  stringdtype-support.md
docs/benchmarks/numba-v-0.65.1/: README.md  matrix.csv
docs/exploration/: string_array_shape_audit.csv  string_array_shape_audit.py  stringdtype_access_bench.py  stringdtype_access_rejected.md  stringdtype_affix_bench.py  stringdtype_equal_bench.py  stringdtype_na_object_probe.py  stringdtype_order_bench.py  stringdtype_predicate_bench.py  stringdtype_probe.py  stringdtype_scalar_affix_bench.py  stringdtype_scalar_search_bench.py  stringdtype_search_bench.py
